# cpp_call_python_wrapper

./: CMakeLists.txt  main.cpp
python_code/: demo.py  setup.py
