cmake_minimum_required(VERSION 3.16)
project(cpp_python_demo)
# set(pybind_11_DIR /home/shzhou/.local/lib/python3.8/site-packages/pybind11/share/cmake/pybind11)
find_package(Eigen3 REQUIRED)
find_package(pybind11 CONFIG REQUIRED)
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(myexe main.cpp)
target_link_libraries(myexe PUBLIC pybind11::embed ${OpenCV_LIBRARIES})